General accessibility fixes. Text alignment for tags on small screens.

--- a/front_end/stylesheets/helpers.scss
+++ b/front_end/stylesheets/helpers.scss
@@ -90,9 +90,10 @@
 }
 
 .fbr-clickable-tag {
-  border: none;
-  background: govuk-colour("light-grey");
   padding: 2px 4px;
+  text-align: left;
+  background: govuk-colour("light-grey");
+  border: none;
   font: inherit;
   cursor: pointer;
   outline: inherit;
